# exeter-cycling-club

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  package.json
backend/: .gitignore  Cargo.toml  Makefile  Pipfile  README.md  openapi.yaml  package.json  serverless.yml
backend/src/: attendance.py  authenticate.py  cancel_route.py  contact.py  email.py  set_route.py
backend/src/lambda/: attendance_report.rs  authenticate.rs  cancel_route.rs  contact.rs  get_route.rs  set_route.rs  subscribe.rs  unsubscribe.rs
backend/src/lambda/attendance/: attendance_report.rs  set_attendance.rs
backend/src/lambda/email/: confirm_subscribe.rs  subscribe.rs  unsubscribe.rs
backend/src/lambda/route/: cancel_route.rs  clear_route.rs  get_route.rs  set_route.rs
backend/src/lib/: route.rs
backend/src/templates/: attendance.html  attendance.txt  cancelled.html  confirm.html  update-private.html  update.html  update.txt
backend/terraform/: Makefile  api-gw.tf  cloudfront.tf  dynamo-db.tf  eventbridge.tf  iam.tf  lambda.tf  s3.tf  ses.tf  ssm.tf  terraform.tf  terraform.tfvars  variables.tf
backend/tests/: attendance_tests.py  set_route_tests.py
frontend/: .env  .env.development  .gitignore  Cargo.toml  Makefile  README.md  index.html  index.scss  package.json  tsconfig.json
frontend-ssr/: .gitignore  Cargo.toml  Makefile  README.md  index.html  index.scss
frontend/public/: index.html  manifest.json
frontend/src/: app.rs  components.rs  config.ts  error-page.tsx  helpers.rs  index.tsx  lib.rs  main.rs  theme.ts  types.ts
frontend/src/components/: about_section.rs  app.rs  cancel_form.rs  confirm_route.rs  confirm_subscribe.rs  contact_form.rs  contact_us.rs  email_sign_up.rs  footer.rs  framed_image.rs  home.rs  loading_spinner.rs  mod.rs  nav_bar.rs  no_route_display.rs  not_found.rs  notification.rs  page_header.rs  redirect.rs  reset_scroll.rs  ride_page.rs  route_cancel.rs  route_card.rs  route_display.rs  route_form.rs  route_select.rs  secure.rs  set_status.rs  sign_in.rs  sign_out.rs  text_column.rs  unsubscribe.rs
frontend/src/components/Banner/: Banner.tsx
frontend/src/components/Body/: Body.tsx
frontend/src/components/BodySection/: BodySection.tsx
frontend/src/components/ElevationView/: ElevationView.tsx
frontend/src/components/EmailSignUp/: EmailSignUp.tsx
frontend/src/components/Footer/: Footer.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/components/LoadingSpinner/: LoadingSpinner.tsx
frontend/src/components/Map/: Map.css  Map.tsx
frontend/src/components/RideDetails/: RideDetails.tsx
frontend/src/components/RouteSelect/: RouteSelect.tsx
frontend/src/components/Showcase/: Showcase.tsx
frontend/src/constants/: application_endpoints.rs  defaultDescription.ts  endpoints.ts  mod.rs  startDetails.ts  strava_endpoints.rs
frontend/src/copy/: homepage.ts
frontend/src/helpers/: about_us.rs  auth_state.rs  callApi.ts  cancel_route.rs  external_links.rs  form_state.rs  get_route.rs  go_to_page.rs  handleLogin.ts  handle_auth.rs  list_routes.rs  mod.rs  put_status.rs  request_confirm_subscribe.rs  request_unsubscribe.rs  scroll_to_top.rs  send_email.rs  set_route.rs  sign_up.rs  useWindowWidth.ts  validate_email.rs
frontend/src/pages/Cancel/: Cancel.tsx
frontend/src/pages/Contact/: Contact.tsx
frontend/src/pages/Home/: Home.tsx
frontend/src/pages/Redirect/: Redirect.tsx
frontend/src/pages/RidePage/: RidePage.tsx
frontend/src/pages/Select/: Select.tsx
frontend/src/pages/SetStatus/: SetStatus.tsx
frontend/src/pages/SignIn/: SignIn.tsx
frontend/src/pages/Unsubscribe/: Unsubscribe.tsx
frontend/src/redux/: store.ts  user.ts
terraform/: Makefile  dynamo-db.tf  s3.tf  ses.tf  ssm.tf  terraform.tfvars
