[package]
name = "exeter-cycling-club-api"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1.1"
aws-sdk-ses = "1.7.0"
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[[bin]]
name = "contact"
