[package]
name = "exeter_cycling_club_ssr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
required-features = ["hydration"]

[[bin]]
name = "server"
required-features = ["ssr"]

[dependencies]
yew = "0.21.0"
exeter_cycling_club = { path = "../frontend" }
futures = { version = "0.3", features = ["std"], default-features = false }
lambda_http = "0.11.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.33.0", features = ["full"] }
axum = "0.6"
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.3", features = ["fs", "compression-gzip"] }
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
hyper = { version = "0.14", features = ["server", "http1"] }

[target.'cfg(unix)'.dependencies]
jemallocator = "0.5"

[features]
ssr = ["yew/ssr"]
hydration = ["yew/hydration"]

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
