[package]
name = "exeter_cycling_club_ssr"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "client"
required-features = ["hydration"]

[[bin]]
name = "server"
required-features = ["ssr"]

[dependencies]
yew = "0.21.0"
exeter_cycling_club = { path = "../frontend" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "compression-gzip"] }
lambda_http = "0.11.1"
futures = { version = "0.3", features = ["std"], default-features = false }
serde = "1.0.196"
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
jemallocator = "0.5"

[features]
ssr = ["yew/ssr"]
hydration = ["yew/hydration"]

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
