[package]
name = "exeter_cycling_club"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr", "ssr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
regex = "1.10.2"
wasm-bindgen = "0.2.89"
web-sys = "0.3.66"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
wasm-logger = "0.2.0"
log = "0.4.20"

[[bin]]
name = "exeter_cycling_club"
required-features = ["yew/csr"]
