[package]
name = "exeter_cycling_club"
version = "1.0.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr", "ssr"] }
yew-router = "0.18.0"
bounce = "0.9.0"
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ["Document", "Element", "DomRect", "ScrollBehavior", "ScrollToOptions"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
regex = "1.10.2"

[[bin]]
name = "exeter_cycling_club"
required-features = ["yew/csr"]

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
